# spiral

./: .bumpversion.cfg  .gitignore  .stupid.swp  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  index.html  makefile  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
dynamite/: __init__.py  cli.py
examples/: citation_prediction_sliding_window_decoder.py  citation_prediction_sliding_window_decoder_batch.py
examples/tf/: citation_prediction.py  citation_prediction_load.py  citation_prediction_sliding_window_decoder.py  citation_prediction_sliding_window_decoder_batch.py  link_prediction_sliding_window.py
examples/torch/: citation_prediction.py  citation_prediction_batch_training.py
experiments/: citation_prediction_sliding_window_decoder.py
installation/: index.html
nineturn/: dataset_extractor.py
nineturn/automl/: model_assembler.py
nineturn/core/: __init__.py  backends.py  commonF.py  config.py  dataio.py  errors.py  layers.py  logger.py  tf_functions.py  torch_functions.py  types.py  utils.py  utils.pyi
nineturn/dtdg/: __init__.py  dataloader.py  types.py
nineturn/encoder/: encoder.py  model.py
search/: search_index.json
spiral/core/: __init__.py  utils.py
spiro/automl/: model_assembler.py
spiro/core/: __init__.py  backends.py  commonF.py  config.py  dataio.py  errors.py  layers.py  logger.py  tf_functions.py  torch_functions.py  types.py  utils.py
spiro/dtdg/: __init__.py  dataloader.py  types.py
tests/: __init__.py  test_dynamite.py
tests/automl/: batch_generator_test.py
usage/: index.html
(+71 files in other folders)
